modify cors extenstions